--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.1.1",
+    "@angular/cdk": "^12.1.1",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
     "@angular/forms": "~10.0.4",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
+    "@angular/router": "^12.1.1",
+    "angular-bootstrap-md": "^11.1.0",
     "h8k-components": "^1.0.0",
     "h8k-design": "^1.0.15",
+    "mdb-angular-ui-kit": "^1.0.0-beta7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
